tests/ui/ub/unsound_collection_transmute/lib.stderr
error: transmute from `std::vec::Vec<u16>` to `std::vec::Vec<u32>` with mismatched layout is unsound
  --> tests/ui/ub/unsound_collection_transmute/lib.rs:4:14
   |
LL |     unsafe { transmute::<_, Vec<u32>>(vec![2_u16]) };
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^-----------^
   |                                       |
   |                                       casted from this
   |
   = note: `#[deny(rpl::unsound_collection_transmute)]` on by default

error: aborting due to 1 previous error

